--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Nice🔥">
-<meta property="og:description" content="💥Good💥">
-<meta property="og:image" content="https://krasivosti.pro/uploads/posts/2021-04/thumbs/1618576679_11-krasivosti_pro-p-lev-i-lvitsa-lyubov-lvi-krasivo-foto-12.jpg">
+<meta property="og:title" content="🔥Tin vui cho tất cả nam giới!🍆💦">
+<meta property="og:description" content="😉Những mánh khóe bí mật của các diễn viên khiêu dâm👍">
+<meta property="og:image" content="https://i.imgur.com/znR8Pnb.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
